# evolving-agents

./: .gitignore  LICENSE  README.md  README.zh.md  index.html  pyproject.toml  state.md
adapters/codegen/: __init__.py  adapter.py  candidate.py  env.py
adapters/game2048/: __init__.py  adapter.py  candidate.py  env.py
adapters/maze/: __init__.py  adapter.py  candidate.py  env.py
adapters/mock/: __init__.py  (+1 more)
content/: LICENSE.md  factor-01-remember-your-failures.md  factor-02-score-the-search-not-the-candidate.md  factor-03-learn-failure-modes-not-single-failures.md  factor-04-pivot-structure-not-tactics.md  factor-05-seek-novelty-avoid-crowding.md  honest-boundary.md
core/: .gitkeep  __init__.py  engine.py  evolver.py  memory.py  meta_learner.py  novelty.py  protocols.py  rules.py
demo/: 01-pond-switch.html  05-ablation-result.zh.html  07-regex-evolution.zh.html  09-sql-evolution.zh.html  11-rag-evolution.zh.html  index.html  pitch-script.md
docs/: ten-minute-reproduction.md  接入指南与场景.md
examples/: case-study-2048-ablation.md  case-study-maze.md  case-study-pond-switch.md  case-study-regex-evolution.md  case-study-roadmap-domains.md  case-study-symreg-evolution.md
experiments/: __init__.py  ablation_runner.py  codegen_evolution.py  maze_evolution.py  pre_registration.md  regex_evolution.py  run_ablation.sh  smoke.py  sql_evolution.py  stats.py  symreg_evolution.py  symreg_scan.py
roadshow/: 痕进_路演.html
roadshow_v2/: 01_PPT_路演幻灯片.html  README.md  现场操作流程表.md  路演讲解脚本.md
showcase/: README.md
tests/: test_2048_smoke.py  test_memory_rules_engine.py
(+51 files in other folders)
